--- a/eventix.html
+++ b/eventix.html
@@ -71,11 +71,12 @@
         </div>
       </div>
     </section>
+
     <section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">DESIGNING FOR A TICKETSHOP DASHBOARD</h2>
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">DESIGNING FOR A TICKETSHOP DASHBOARD</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
           <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
@@ -96,13 +97,13 @@
                 <p style="font-size: 16px">Industrial Designer<br>Front-End Dev</p>
               </div>
             </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-sheet-pencil"></i>
                 <h4>Challenge</h4>
                 <p style="font-size: 16px">Design a customizable dashboard where meaningful data can easily be compared and where the user is frequently updated.</p>
               </div>
             </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-gear"></i>
                 <h4>Methods & Tools</h4>
                 <p style="font-size: 16px">Axure prototyping, Benchmarking, Contextual inquiry, Design review, Design thinking, Expert interviews, Heuristic evaluation, Multidisciplinary collaboration, Personas, Presentation to the client, Survey, Think aloud user tests, User interviews</p>
@@ -112,51 +113,55 @@
       </div>
     </section>
 
+    <!-- Briefing -->
     <section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em;">BRIEFING</h2>
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">BRIEFING</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">ABOUT THE CLIENT AND THE CASE</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Eventix is an online e-ticket solution for event organizers all around the world. Their customers are festivals, theaters, business and sports organizers. One of their products is the desktop dashboard. The dashboard provides to organizers information about sales, insights from marketing, demographics about the audience, etc. These data are fundamental to support business decisions. Therefore, their customers should have a great experience while using this feature. Eventix asked my team to design a dashboard with a better experience for customers that would also reduce the need for supports during and after the sales stage.</p>
-          <iframe class="col-sm-12 text-center" style="padding-top: 2em;" width="600" height="700" src="https://www.youtube.com/embed/rS2n4u7SR1U" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">ABOUT THE CLIENT AND THE CASE</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">Eventix is an online e-ticket solution for event organizers all around the world. Their customers are festivals, theaters, business and sports organizers. One of their products is the desktop dashboard. The dashboard provides to organizers information about sales, insights from marketing, demographics about the audience, etc. These data are fundamental to support business decisions. Therefore, their customers should have a great experience while using this feature. Eventix asked my team to design a dashboard with a better experience for customers that would also reduce the need for supports during and after the sales stage.</p>
+          <iframe class="os-animation col-sm-12 text-center" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="padding-top: 2em;" width="600" height="700" src="https://www.youtube.com/embed/rS2n4u7SR1U" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
       </div>
     </section>
 
+    <!-- User Research -->
     <section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em;">USER RESEARCH</h2>
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">USER RESEARCH AND REQUIREMENTS ELUCIDATION</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">INTERVIEWS, SURVEY, PERSONAS</h3>
-          <!--p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.<!The current data that is presented on the dashboard feels insufficient for event organizers:<br>The information on the dashboard doesn’t fully communicate their needs.<br>There’s an overload of graphs.<br>The type of data visualisation doesn’t serve the needs - it has no added value for them.<br>Some graphs are not used at all because they don’t understand it.></p-->
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">INTERVIEWS, SURVEY AND PERSONAS</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
           <div class="portfolio-single-content">
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-12 margin-top os-animation">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/eventix/persona.jpg" alt="Project Image"/></div>
             </div>
           </div>
+        </div>
       </div>
     </section>
 
+    <!-- Alert Applet & Notification Feed -->
     <section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em;">ALERT APPLET & NOTIFICATION FEED</h2>
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">ALERT APPLET & NOTIFICATION FEED</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">KEEPING THE USER UPDATED</h3>
-          <!--p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p-->
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">KEEPING THE USER UPDATED</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/eventix/scheme.jpg" alt="Project Image"/></div>
@@ -164,25 +169,27 @@
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/eventix/wireframe1.jpg" alt="Project Image"/></div>
             </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/eventix/newsfeed.jpg" alt="Project Image"/></div>
             </div>
           </div>
+        </div>
       </div>
     </section>
 
+    <!-- Design Outcomes -->    
     <section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em;">DESIGN OUTCOMES</h2>
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">DESIGN OUTCOMES</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">USER TEST OUTCOMES AND DESIGN RECEOMENDATIONS</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
-          <iframe class="col-sm-12" src="https://player.vimeo.com/video/244456470" width="600" height="700" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">USER TEST AND DESIGN RECOMMENDATIONS</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
+          <iframe class="os-animation col-sm-12 text-center" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="padding-top: 2em;" width="600" height="700" src="https://player.vimeo.com/video/244456470" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
       </div>
     </section>
 
@@ -191,14 +198,14 @@
       <div class="container-fluid">
         <div class="col-md-12 text-center margin-bottom">
             <div class="section-head">
-              <span style="font-size: 1.1em;">CHECK OTHER</span>
-              <h2 style="padding-top: 0.1em;">PROJECTS</p></h2>
+              <span class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="font-size: 1.1em;">CHECK OTHER</span>
+              <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="padding-top: 0.1em;">PROJECTS</p></h2>
               <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
             </div>
           </div>
         <div class="col-md-10 col-md-offset-1">
           <ul class="masonry-wrap">
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-4 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -214,7 +221,7 @@
                     </div>
                   </div></a></div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-4 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/dochange/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -234,7 +241,7 @@
                 </a>
               </div>
             </li-->
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="sonus.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -254,7 +261,7 @@
                 </a>
               </div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -269,28 +276,29 @@
       </div>
     </section>
 
+    <!--Contact Me-->
     <section class="section section-white text-center">
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-              <h2 style="padding-top: 0.1em;">CONTACT ME</p></h2>
-              <p>I'm looking for a full-time job. You can reach out via e-mail or phone.</p>
+              <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="padding-top: 0.1em;">CONTACT ME</p></h2>
+              <p class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">I'm looking for a full-time job. You can reach out via e-mail or phone.</p>
               <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
           </div>
         </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
+        <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-4 margin-top os-animation">
           <div class="icon-block"><i class="icon-basic-flag1"></i>
             <h4>LOCATION</h4>
             <p>Eindhoven, The Netherlands</p>
           </div>
         </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-4 margin-top small-screen-margin-top os-animation">
+        <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-4 margin-top small-screen-margin-top os-animation">
           <div class="icon-block"><i class="icon-basic-keyboard"></i>
             <h4>EMAIL</h4>
             <p>dtgmariano@gmail.com</p>
           </div>
         </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-4 margin-top small-screen-margin-top os-animation">
+        <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-4 margin-top small-screen-margin-top os-animation">
           <div class="icon-block"><i class="icon-basic-smartphone"></i>
             <h4>PHONE</h4>
             <p>+31 (06) 1452 4605</p>
