--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               </li>
 
               <li data-os-animation="fadeIn" data-os-animation-delay="0.8s" class="col-lg-6 os-animation">
-                <div class="masonry-item background-color-3"><a class="page-scroll" href="#contact"><img src="assets/images/me/tb.jpg" alt="Portfolio-image"/>
+                <div><img src="assets/images/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
                         <h2>Let's work together!</h2>
