--- a/aac.html
+++ b/aac.html
@@ -170,7 +170,7 @@
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
           <h3 class="os-animation">USER TEST OUTCOMES AND DESIGN RECEOMENDATIONS</h3>
           <!--p class="os-animation text-left" stat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p-->
-          <iframe style="padding-top: 1em; padding-bottom: 2em;" class="col-sm-12" src="https://player.vimeo.com/video/244571225" width="3yle="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidat75" height="650" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <iframe class="os-animation col-sm-12 text-center" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="padding-top: 2em;" width="600" height="700" src="https://player.vimeo.com/video/244571225" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
       </div>
     </section>
 
