--- a/sonus.html
+++ b/sonus.html
@@ -75,7 +75,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">SONUS: PERSONALISED MUSIC INSTRUMENT</h2>
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">SONUS: PERSONALISED MUSIC INSTRUMENT</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
           <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
@@ -96,13 +96,13 @@
                 <p style="font-size: 16px">Two Industrial Designers<br>Interaction Designer</p>
               </div>
             </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-sheet-pencil"></i>
                 <h4>Challenge</h4>
                 <p style="font-size: 16px">Design a personal musical instrument to enable musical illiterates in friendly social gatherings to produce meaningful sounds in order to express themselves.</p>
               </div>
             </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-gear"></i>
                 <h4>Methods & Tools</h4>
                 <p style="font-size: 16px">9-DOF Accelerometer Sensor, Arduino Prototyping, Design review, Design thinking, Expert review, Heuristic evaluation, Multidisciplinary collaboration, Tangible Prototyping</p>
@@ -112,58 +112,62 @@
       </div>
     </section>
 
+    <!-- Briefing -->
     <section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em;">DESIGN CHALLENGE</h2>
-            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">DESIGN CHALLENGE</h2>
+            <img class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">BRIEFING</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Jam sessions are a nice social activities where people such as young adults do not only show their musical skills, but also produce music together and get a connected feeling with each other that can enhance the group dynamics. A music illiterate in the group however would feel left out in this scenario. That person could maybe only tap to the beat, or play the tambourine, also to mimic the beat, but that’s where it stops. The tambourine does not always fit the sound that the band is playing and it can quite a monotonous interaction with the instrument. To solve this problem we aim to design a personalised musical instrument to enable young adults who are music illiterates in friendly social gatherings to produce meaningful sounds in order to express themselves artistically.
-          </p>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">BRIEFING</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">Jam sessions are a nice social activities where people such as young adults do not only show their musical skills, but also produce music together and get a connected feeling with each other that can enhance the group dynamics. A music illiterate in the group however would feel left out in this scenario. That person could maybe only tap to the beat, or play the tambourine, also to mimic the beat, but that’s where it stops. The tambourine does not always fit the sound that the band is playing and it can quite a monotonous interaction with the instrument. To solve this problem we aim to design a personalised musical instrument to enable young adults who are music illiterates in friendly social gatherings to produce meaningful sounds in order to express themselves artistically.</p>
       </div>
     </section>
 
+    <!-- Prototype -->
     <section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em;">PROTOTYPING</h2>
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">PROTOTYPE</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
+        </div>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">BUILDING THE DEVICE</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
           <div class="portfolio-single-content">
-            <h3 class="os-animation">CAPTURING MOVEMENT AND CONVERTING INTO MUSIC AND EMOTIONS</h3>
-            <div class="portfolio-single-content">
-              <div data-os-animation="fadeIn" data-os-animation-delay="0.1ss" class="col-md-12 margin-top os-animation">
-                <div class="row"><img src="assets/images/sonus/scheme.jpg" alt="Project Image"/></div>
-              </div>
-              <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
-                <div class="row"><img src="assets/images/sonus/joystick.jpg" alt="Project Image"/></div>
-              </div>
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
+              <div class="row"><img src="assets/images/sonus/scheme.jpg" alt="System Diagram"/></div>
+            </div>
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
+              <div class="row"><img src="assets/images/sonus/joystick.jpg" alt="Joystick"/></div>
             </div>
           </div>
         </div>
       </div>
     </section>
 
+    <!-- Design Outcomes -->    
     <section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em;">SONUS</h2>
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">SONUS</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">WHAT WE DID</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">The product is a handheld device that provides haptic direct manipulation as there are different elements on the product, such as the volume, the knob and the different sound modules. It does not provide haptic feedback however, but rather visual (light) and auditorial feedback. Sonus provides an active experience as the user can use small movements by hand and big arm movements to control the music, and naturally move the entire body to engage with the music (Spatial Interaction). The user has to explore which movement belongs to which sound effect (performative action). The interaction with Sonus is lightweight (Tangible Manipulation) as it has a low learning curve. The user has a low threshold to explore the functionalities as the sound immediately reacts to the movement. </p>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">As described in the MCRpd interaction model, there are three main key characteristics of tangible interfaces. First, there is the mental model. In the concept of Sonus, the users’ movement guide the music. Normally, you should press a key or touch a string to produce a sound but only experienced musicians can relate notes to corresponding keys or strings. Sonus links the movement directly to the music. The tempo that you move the device, determines the tempo of the music. Second, control of the device. Sonus uses physical representations for control. The user can add an instrument by attaching a sound module to the device. In this way the user has a clear overview of the instruments he or she is controlling. Finally, the link between physical and digital representations. For this concept the digital respresentation is the sound and the light that is the output of the interaction with the device.</p>
-          <iframe src="https://player.vimeo.com/video/247112834" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">CAPTURING MOVEMENT AND CONVERTING INTO MUSIC AND EMOTIONS</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">The product is a handheld device that provides haptic direct manipulation as there are different elements on the product, such as the volume, the knob and the different sound modules. It does not provide haptic feedback however, but rather visual (light) and auditorial feedback. Sonus provides an active experience as the user can use small movements by hand and big arm movements to control the music, and naturally move the entire body to engage with the music (Spatial Interaction). The user has to explore which movement belongs to which sound effect (performative action). The interaction with Sonus is lightweight (Tangible Manipulation) as it has a low learning curve. The user has a low threshold to explore the functionalities as the sound immediately reacts to the movement.</p>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.5s" style="font-size: 1.4em; padding-top: 1.2em;">As described in the MCRpd interaction model, there are three main key characteristics of tangible interfaces. First, there is the mental model. In the concept of Sonus, the users’ movement guide the music. Normally, you should press a key or touch a string to produce a sound but only experienced musicians can relate notes to corresponding keys or strings. Sonus links the movement directly to the music. The tempo that you move the device, determines the tempo of the music. Second, control of the device. Sonus uses physical representations for control. The user can add an instrument by attaching a sound module to the device. In this way the user has a clear overview of the instruments he or she is controlling. Finally, the link between physical and digital representations. For this concept the digital respresentation is the sound and the light that is the output of the interaction with the device.</p>
+          <iframe class="os-animation col-sm-12 text-center" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="padding-top: 2em;" width="600" height="700" src="https://player.vimeo.com/video/247112834" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
       </div>
     </section>
+
 
     <!--Check other projects -->
     <section class="section section-black">
