--- a/dochange.html
+++ b/dochange.html
@@ -112,6 +112,22 @@
       </div>
     </section>
 
+    <!-- Briefing -->
+    <section class="section section-white">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">BRIEFING</h2>
+            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
+          </div>
+        </div>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">ABOUT THE CLIENT AND THE CASE</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">DoChange is an European Consortium that aims to develop a health ecosystem for integrated disease management for hypertensive and cardiac patients. The project includes a clinical trial that checks efficiency of the lifestyle change advice provided by researchers. Cardiac patients receive lifestyle advice, while their wearable devices collect activity data over up to 10 months.</p>
+          <iframe class="os-animation col-sm-12 text-center" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="padding-top: 2em;" width="600" height="700" src="https://www.youtube.com/embed/igAVmWnbgds" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
+      </div>
+    </section>
+
     <!--section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
