--- a/dochange.html
+++ b/dochange.html
@@ -96,16 +96,16 @@
                 <p style="font-size: 16px">Cognitive Psychologist<br>Neurobiologist</p>
               </div>
             </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-sheet-pencil"></i>
                 <h4>Challenge</h4>
                 <p style="font-size: 16px">Design a dashboard that allows researchers to identify in a glance if a specific user or provider presents a significant data loss.</p>
               </div>
             </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-gear"></i>
                 <h4>Methods & Tools</h4>
-                <p style="font-size: 16px">Axure prototyping, Benchmarking, Contextual inquiry, Design review, Design thinking, Expert interviews, Heuristic evaluation, Multidisciplinary collaboration, Personas, Presentation to the client, Survey, Think aloud user tests, User interviews</p>
+                <p style="font-size: 16px">Benchmarking, Business requirements elucidation, C#, D3.js, Design review, Design thinking, Expert interviews, Git, Heuristic evaluation, Javascript, JSON, Jupyter Notebook, Literature Review, Multidisciplinary collaboration, Paper Prototype, Presentation to the client, Tableau, Think aloud user tests</p>
               </div>
             </div>
         </div>
@@ -123,8 +123,23 @@
         </div>
         <div class="col-md-12 text-block text-center">
           <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">ABOUT THE CLIENT AND THE CASE</h3>
-          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">DoChange is an European Consortium that aims to develop a health ecosystem for integrated disease management for hypertensive and cardiac patients. The project includes a clinical trial that checks efficiency of the lifestyle change advice provided by researchers. Cardiac patients receive lifestyle advice, while their wearable devices collect activity data over up to 10 months.</p>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">DoChange is an European Consortium that aims to develop a health ecosystem for integrated disease management. This system is focused on hypertensive and cardiac patients. The project includes a clinical trial that checks efficiency of the lifestyle change advice provided by researchers. Cardiac patients receive lifestyle advice, while their wearable devices collect activity data over up to 10 months. This researchers struggle with data loss that can occur for many different reasons. My team's task was to design a dashboard that helps researchers to identify in a glance if a specific user or provider presents a significant data loss.</p>
           <iframe class="os-animation col-sm-12 text-center" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="padding-top: 2em;" width="600" height="700" src="https://www.youtube.com/embed/igAVmWnbgds" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
+      </div>
+    </section>
+
+    <section class="section section-white">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <div class="section-head">
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">PROTOTYPING FOR DATA VISUALIZATION</h2>
+            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
+          </div>
+        </div>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">FROM PAPER TO FRONT-END</h3>
+          <!--p class="os-animation text-left" stat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p-->
+          <iframe class="os-animation col-sm-12 text-center" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="padding-top: 2em;" width="600" height="700" src="https://player.vimeo.com/video/244564868" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
       </div>
     </section>
 
