--- a/aac.html
+++ b/aac.html
@@ -163,12 +163,12 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">DESIGN OUTCOMES</h2>
+            <h2 style="line-height: 1.05em;">USER TEST</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">USER TEST OUTCOMES AND DESIGN RECEOMENDATIONS</h3>
+          <h3 class="os-animation">DESIGN OUTCOMES AND RECOMMENDATIONS</h3>
           <!--p class="os-animation text-left" stat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p-->
           <iframe class="os-animation col-sm-12 text-center" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="padding-top: 2em;" width="600" height="700" src="https://player.vimeo.com/video/244571225" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
       </div>
