--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-3 small-screen-margin-top os-animation">
               <h4>METHODS</h4>
-              <p>A/B Testing, Affinity Diagram, Brainstorming, Business Canvas Model, Contextual Task Analysis, Design Sprint, Heuristic Evaluation, Personas, Storyboarding, Surveys, Usability Testing, User Inteviews, Wireframing</p>
+              <p>A/B Testing, Affinity Diagram, Brainstorming, Business Model Canvas, Contextual Task Analysis, Design Sprint, Heuristic Evaluation, Personas, Storyboarding, Surveys, Usability Testing, User Inteviews, Wireframing</p>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.6s" class="col-md-3 small-screen-margin-top os-animation">
               <h4>PROTOTYPE</h4>
